Fixes z-index of forkme link

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -140,7 +140,7 @@ pre {
 	background: url('forkme.png') top right no-repeat;
 	width: 149px;
 	height: 149px;
-	z-index: 9999999;
+	z-index: 999;
 }
 
 #content p, #content li {
